--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   left: 20px;
   bottom: 20px;
   background-color: #4d5df9;
-  width: 120px;
+  width: 90px;
   /* width: 100px; */
   border-radius: 20px;
   padding-top: 40px;
@@ -95,7 +95,6 @@
   text-align: center;
   font-size: 2rem;
   font-weight: 200;
-  padding-left: 20px;
 }
 .sidebar ul li a span:last-child {
   margin-left: 30px;
@@ -275,7 +274,7 @@ input[type="checkbox"]:checked ~ .check:after {
     transform: translateY(100px) scale(1);
   }
 }
-#menuSidebar {
+#menuBar {
   opacity: 0;
 }
 
@@ -289,13 +288,9 @@ input[type="checkbox"]:checked ~ .check:after {
   .sidebar {
     opacity: 0;
   }
-  #menuSidebar {
+  #menuBar {
     font-size: 2.5rem;
     opacity: 1;
-    transform: translateY(20px);
-  }
-  #menuSidebar:focus .sidebar {
-    opacity: 1;
-    width: 100px;
+    transform: translateY(25px);
   }
 }
