--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
 .sidebar {
   position: fixed;
   top: 20px;
@@ -184,18 +188,20 @@ input[type="checkbox"]:checked ~ .check:after {
   text-align: center;
   padding: 20px 0;
 }
-.garden__content {
-}
+
 .garden__content img {
   background-color: transparent;
   object-fit: cover;
+}
+.garden__content {
+  gap: 20px;
 }
 
 .garden__item {
   position: relative;
   background-color: #4d5df9;
   border-radius: 10px;
-  width: 400px;
+  width: 100%;
   height: 300px;
   padding: 20px;
   color: #fff;
@@ -250,9 +256,6 @@ input[type="checkbox"]:checked ~ .check:after {
   animation: rainOn 0.5s linear 4s infinite alternate; */
   transition: all 0.5s;
 }
-.garden__content {
-  gap: 30px;
-}
 
 /* ----------------- Hiệu ứng ----------- */
 @keyframes rainOn {
@@ -278,9 +281,9 @@ input[type="checkbox"]:checked ~ .check:after {
 /* ------------------- Responsive --------------------  */
 @media screen and (max-width: 576px) {
   .garden__tittle {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    font-weight: bold;
     line-height: 35px;
-    transform: translateX(50px);
   }
   .toggle {
     right: 5px;
@@ -288,4 +291,10 @@ input[type="checkbox"]:checked ~ .check:after {
   .sidebar {
     opacity: 0;
   }
+  /* .sidebar {
+    opacity: 1;
+    z-index: 999;
+  }
+  .sidebar.active .garden__content {
+  } */
 }
